# ray-tracer

./: .gitignore  Cargo.toml  test.file
benches/: matrix_bench.rs  ppm_bench.rs
src/: camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  main.rs  material.rs  matrix.rs  pattern.rs  point_light.rs  ppm_printer.rs  ray.rs  shape.rs  sphere.rs  transform.rs  tuple.rs  world.rs
tests/: camera_test.rs  canvas_test.rs  color_test.rs  intersection_test.rs  light_test.rs  matrix_test.rs  pattern_test.rs  plane_test.rs  ray_test.rs  sphere_test.rs  transform_test.rs  tuple_test.rs  world_test.rs
