[package]
name = "ray_tracer"
authors = ["Josh Leath <joshua.leath@icloud.com"]
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ppm_bench"
harness = false

